--- a/roles/dev_pkgs/tasks/main.yml
+++ b/roles/dev_pkgs/tasks/main.yml
@@ -5,7 +5,7 @@
     state: present
     update_cache: true
 
-- name: Install dev tools:
+- name: Install dev tools
   with_items: "{{ dev_tools }}"
   pacman:
     name: "{{ item }}"
