--- a/roles/dev_pkgs/tasks/main.yml
+++ b/roles/dev_pkgs/tasks/main.yml
@@ -37,9 +37,9 @@
     name: docker
     state: present
 
-- name: Add user: {{ user }}  to docker group
+- name: Add user to docker group
   user:
-    name: "{{ user }}"
+    name: "{{ lookup('env', 'USER') }}"
     groups: docker
     append: yes
 
