--- a/roles/lightdm/tasks/main.yml
+++ b/roles/lightdm/tasks/main.yml
@@ -10,3 +10,22 @@
     state: present
     update_cache: true
 
+- name: Download theme repo
+  become: false
+  git:
+    repo: "{{ theme.repo }}"
+    version: "{{ theme.tag }}"
+    dest: /tmp/lightdm-greeter-theme
+
+- name: Copy theme files to location
+  become: false
+  copy:
+    src: /tmp/lightdm-greeter-theme
+    dest: /usr/share/lightdm-webkit/themes/glorious
+
+- name: Set lightdm webkit2 as the greeter
+  with_values:
+    - "sudo sed -i 's/^\(#?greeter\)-session\s*=\s*\(.*\)/greeter-session = lightdm-webkit2-greeter #\1/ #\2g' /etc/lightdm/lightdm.conf"
+    - "sudo sed -i 's/^webkit_theme\s*=\s*\(.*\)/webkit_theme = glorious #\1/g' /etc/lightdm/lightdm-webkit2-greeter.conf"
+    - "sudo sed -i 's/^debug_mode\s*=\s*\(.*\)/debug_mode = true #\1/g' /etc/lightdm/lightdm-webkit2-greeter.conf"
+  shell: "{{ item }}"
