I don't know wtf I added this time

--- a/roles/dev_pkgs/tasks/main.yml
+++ b/roles/dev_pkgs/tasks/main.yml
@@ -52,4 +52,9 @@
     name: "{{ lookup('env', 'USER') }}"
     groups: docker
     append: yes
+  
+- name: Start docker
+  systemd:
+    state: started
+    name: docker.service
 
