--- a/roles/lightdm/defaults/main.yml
+++ b/roles/lightdm/defaults/main.yml
@@ -1,3 +1,3 @@
 theme:
-  repo: "https://aur.archlinux.org/lightdm-webkit2-theme-glorious.git"
+  repo: "https://github.com/manilarome/lightdm-webkit2-theme-glorious"
   tag: "v2.0.5"
