'Nother day of work

--- a/main.yml
+++ b/main.yml
@@ -6,8 +6,9 @@
   become_method: sudo
   become: true
   roles:
-    - role: awesomewm
-    - role: dev_pkgs
-    - role: lightdm
-    - role: tune_os
+    # - role: i3wm
+    # - role: dev_pkgs
+    # - role: lightdm
+    # - role: tune_os
+    - role: sound
 
