--- a/roles/lightdm/defaults/main.yml
+++ b/roles/lightdm/defaults/main.yml
@@ -1,3 +1,8 @@
 theme:
   repo: "https://github.com/manilarome/lightdm-webkit2-theme-glorious"
   tag: "v2.0.5"
+
+packages:
+  - lightdm
+  - lightdm-gtk-greeter
+
